<resources>
    <string name="app_name">QuizApp</string>
    <string name="title">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Please enter your name.</string>
    <string name="name">name</string>
    <string name="btn_start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="barPro">0/9</string>
    <string name="result">Result</string>
    <string name="result_trophy">result_trophy</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
</resources>